# JettaPipeline

./: Dockerfile  README.md  data.db  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: health_check.yml  pipeline.yml
dockerexercises/: dockerfiles
documentation/: LICENSE.txt  definition_of_done.md  final_report.md  instructions.md
src/: AppLibrary.py  app.py  build.py  database.py  routes.py  util.py
src/repositories/: note_repository.py  user_repository.py
src/services/: bib_service.py  note_service.py  user_service.py
src/static/css/: styles_main.css
src/static/images/: x_icon_harmaa_128.txt
src/static/javascript/: actions.js
src/templates/: base.html  create_note.html  credentials_frame.html  login.html  main.html  note_listing.html  register.html
src/tests/: database_test.py  login.robot  login_resource.robot  note_resource.robot  notes.robot  register.robot  register_resource.robot  resource.robot  util_test.py
src/tests/repositories/: note_repository_test.py  user_repository_test.py
src/tests/services/: bib_service_test.py  note_service_test.py  user_service_test.py
